fix: font too small on widgets

--- a/widgets/subway/subway.scss
+++ b/widgets/subway/subway.scss
@@ -26,7 +26,7 @@
 
   .direction {
     display: block;
-    font-weight: 100;
+    font-weight: 300;
   }
 
   .time {
